fixed heading margin collapsing by setting menu icon absolute

--- a/css/main.css
+++ b/css/main.css
@@ -81,9 +81,12 @@ a {
 
 .icon-menu {
   display: inline-block;
-  position: relative;
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  font-size: 0em;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
   background: white;
   background-color: lightgrey;
   z-index: 2;
@@ -122,23 +125,31 @@ a {
 .main-heading {
   display: inline-block;
   margin: 0;
-  margin-bottom: 10px;
+  /*margin-left: 35%;*/
+  margin-top: 13px;
   padding: 0;
 }
 
 .main-header {
   position: relative;
-  height: 50px;
+  height: 60px;
   z-index: 2;
+  
+  text-align: center;
+
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.25);
+  -moz-box-shadow:    0px 5px 5px 0px rgba(50, 50, 50, 0.25);
+  box-shadow:         0px 5px 5px 0px rgba(50, 50, 50, 0.25);
 }
 
 .main-nav {
   width: 300px;
   height: 100%;
   position: absolute;
-  top: 50px;
+  top: 60px;
   left: -300px;
   padding: 0;
+  margin: 0;
 
   z-index: 2;
   -webkit-transition: -webkit-transform 0.1s linear;
